@@ -1,3 +1,9 @@
+2007-07-30  Willie Walker  <william.walker@sun.com>
+
+        * macaraoon/playback/keypress_mimic.py: add "interval" parameter
+        to TypeAction constructor and then use it in _doType as a means
+        to allow overriding of keystroke_interval.
+
 2007-07-29  Eitan Isaacson  <eitan@ascender.com>
 
 	* macaroon/playback/keypress_mimic.py: Added English strings to
